Fix: Removing height and width from embedded map and created a custom CSS class to allow for 100% width to be applied. This ensures resposiveness on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,12 @@ h1, h2, h5 {
   object-fit: cover;
 }
 
+/* Responsive map on Home page */
+.responsive-map {
+    width: 100%;
+    height: 300px;
+}
+
 
 /* Buttons */
 .white-button {
